slightly beautified stats

--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -69,7 +69,7 @@
 	<div class="divOuter"  >
         <div class="select divInner1"  style="margin-top: 50px; margin-right: 100px;">
             <select id= "select" onchange="display_ex();" class="select-text" required>
-                <option value="" disabled selected></option>
+                <option value="" selected></option>
             </select>
             <span class="select-highlight"></span>
             <span class="select-bar"></span>
@@ -79,7 +79,11 @@
 
 
         <div class="divInner2">
-            <p>Choose the parameter/s 
+            <p style="font-size: large; 
+                      font-weight: bold; 
+                      padding-bottom: 8px; 
+                      border-bottom: 4px solid rgba(0,0,0, 0.12); 
+                      border-right: 4px solid rgba(0,0,0, 0.12);">&nbsp Choose the parameter/s &nbsp
             <div class="page__toggle" style="margin-top: 10px;">
                 <label class="toggle">
                   <input id="weight_box" class="toggle__input" type="checkbox" checked>
