--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -545,8 +545,8 @@
         {
             parse += (i + 1) + ". Entry on: " + json.values[i].created + "\\n";
             parse += "weight: " + json.values[i].weight + "\\n";
-            parse += "Reps: " + json.values[i].sets + "\\n";
-            parse += "Sets: " + json.values[i].reps + "\\n";
+            parse += "Sets: " + json.values[i].sets + "\\n";
+            parse += "Reps: " + json.values[i].reps + "\\n";
             parse += "Max Rep: " + json.values[i].max_rep + "\\n\\n";
         }
 
