--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
 
 
 
@@ -651,12 +651,27 @@
                 ]
             },
             options: {
+                ticks: {
+              beginAtZero: false,
+              min: 0,
+              max: 5.03,
+              stepSize: 1,
+              padding: 10,
+              fontFamily: 'Karla, sans-serif',
+              maxRotation: 0,
+              callback: function(value, index, values) {
+                if (value !== 5.03) {
+                  return values[index]
+                }
+              }
+            },
                 title: {
                     display: false,
                     text: 'Trainingsplan'
                 },
                 legend: {
                     display: true,
+                    //position: 'bottom',
                     labels: {
                         fontSize: 20
                     }
